# rpcb-tool

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
docs/: kicad-file-format.md  roadmap-adversarial-review.md
plugins/rpcb/: .mcp.json
plugins/rpcb/.claude-plugin/: plugin.json
plugins/rpcb/commands/: review-schematic.md  rpcb-init-rules.md
plugins/rpcb/skills/schematic-review/: SKILL.md
rpcb/: cli.py  datasheets.py  extract.py  init_prompt.md  mcp.py  project.py  requirements.py  review_prompt.md  rules.py  sexpr.py  views.py
rpcb/rules/: __init__.py  builtin.yaml  engine.py  loader.py  spec.py
